# admesh

./: .gitignore  .travis.yml  CMakeLists.txt  COMPILED.xml  ChangeLog  FindADMESH.cmake  INSTALL  Makefile.am  README  README.md  SYSTEM.xml  admesh-doc.txt  admesh.1  admesh.c  autogen.sh  block.stl  configure  configure.ac  configure.in  fortag.sh  libadmesh.pc.in  stl_io.c  stlinit.c  util.c
.github/workflows/: c-cpp.yml  linux.yml  main.yml  windows-x64.yml
docs/: .gitignore  Doxyfile  c_api.rst  cli.rst  conf.py  index.rst  python.rst  requirements.txt  stl.rst
examples/: conveyor.stl  hourglass.stl
src/: admesh.c  connect.c  getopt.c  normals.c  portable_endian.h  shared.c  stl.h  stl_io.c  stlinit.c  util.c
test/: nearby-bad.stl  normal-directions-bad.stl  normal-directions-good.stl  readme.md  xz-mirror.stl  z-rotate-30.stl
test/block/: basic.dxf  basic.off  basic.stl  basic.vrml  binary.stl  exact-bad.stl  exact-good.stl  fill-holes-bad.stl  fill-holes-good.stl  merge.stl  nearby-good.stl  normal-directions-bad.stl  normal-directions-good.stl  remove-unconnected-bad.stl  remove-unconnected-good.stl  scale-xyz.stl  scale.stl  stretch.stl  translate-rel.stl  translate.stl  x-rotate-30.stl  x-y-z-rotate-30.stl  xy-mirror.stl  y-rotate-30.stl  yz-mirror.stl
test/conveyor/: basic.dxf  basic.off  basic.stl  basic.vrml  binary.stl  fill-holes-bad.stl  fill-holes-good.stl  merge.stl  nearby-bad.stl  nearby-good.stl  normal-directions-bad.stl  remove-unconnected-bad.stl  remove-unconnected-good.stl  scale-xyz.stl  scale.stl  stretch.stl  translate-rel.stl  translate.stl  x-rotate-30.stl  x-y-z-rotate-30.stl  xy-mirror.stl  xz-mirror.stl  y-rotate-30.stl  yz-mirror.stl  z-rotate-30.stl
test/hourglass/: basic.dxf  basic.off  basic.stl  basic.vrml  fill-holes-bad.stl  fill-holes-good.stl  merge.stl  nearby-bad.stl  nearby-good.stl  normal-directions-bad.stl  normal-directions-good.stl  remove-unconnected-bad.stl  remove-unconnected-good.stl  scale-xyz.stl  scale.stl  stretch.stl  translate-rel.stl  translate.stl  x-rotate-30.stl  x-y-z-rotate-30.stl  xy-mirror.stl  xz-mirror.stl  y-rotate-30.stl  yz-mirror.stl  z-rotate-30.stl
